change folder structure and add code editor

--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^2.20.0",
+    "@codesandbox/sandpack-themes": "^2.0.21",
+    "@rainetian/sandpack-file-explorer": "^0.1.1-alpha.3",
+    "@tabler/icons-react": "^3.30.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.7",
     "next": "15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18",
+    "react-dom": "18",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
