--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "next": "15.1.7",
+    "next-themes": "^0.4.4",
     "react": "18",
     "react-dom": "18",
     "tailwind-merge": "^3.0.1"
